--- a/css/style.css
+++ b/css/style.css
@@ -5,16 +5,19 @@
 }
 .e-shop-container {
     width: 100%;
-display: flex;
-flex-direction: column;
-align-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .e-shop__text {
-    width:60%;
-    text-align: center;
+    margin-top: 20px;
+   margin-left: 0;
+   margin-right: 0;
+   text-align: center;
 
 }
 .e-shop__text h2 {
+    margin-right: 10px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1.3rem;
     text-transform: uppercase;
@@ -26,9 +29,9 @@ align-items: center;
 .slide {
     margin-top: 1rem;
 }
-/* .carousel-item {
-    left:20%;
-} */
+.carousel-item {
+   left:24%;
+}
 
 .card-wrapper {
     display:flex;
@@ -41,7 +44,7 @@ align-items: center;
     width: 100%;
     width: 60px;
     height: 60px;
-    top:30%;
+    top:35%;
     background-color: #0075ff;
     border-radius: 50%;
 }
@@ -49,18 +52,64 @@ align-items: center;
     color:#ffffff;
     font-size: 2rem;
 }
+
 .btn-more {
-        margin-top: 15px;
-        padding: 0.25rem 1.5rem;
-        border-radius: 0.25rem;
-        background-color: #ffffff;
-        color: #0075ff;
-        border: solid 1px #0075ff;
-}
-.btn-more:hover{
-        background-color: #0075ff;
-        color: #ffffff;
-}      
+    outline: none;
+    cursor: pointer;
+    border: 1px solid #0075ff;
+    padding: 0.5rem 1.4rem;
+    margin: 10px 0 0 0;
+    font-size: inherit;
+    position: relative;
+    display: inline-block;
+    letter-spacing: 0.05rem;
+    font-weight: 700;
+    font-size: .93rem;
+    border-radius: 500px;
+    overflow: hidden;
+    background:#0075ff ;
+    color: #0075ff;
+   }
+   
+.btn-more span {
+    position: relative;
+    z-index: 10;
+    transition: color 0.4s;
+   }
+   
+.btn-more:hover span {
+    color: rgb(255, 255, 255);
+   }
+   
+.btn-more::before, .btn-more::after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+   }
+   
+.btn-more::before {
+    content: "";
+    background:#fff ;
+    width: 120%;
+    left: -10%;
+    transform: skew(30deg);
+    transition: transform 0.4s cubic-bezier(0.3, 1, 0.8, 1);
+   }
+   
+.btn-more:hover::before {
+    transform: translate3d(100%, 0, 0);
+   } 
       
 
 
+@media (min-width: 1200px){
+    .carousel-item {
+        left:20%;
+     }
+     .carousel-control-prev, .carousel-control-next {
+        top:40%;
+    }
+}
