--- a/Desarrollo_HTML/styles.css
+++ b/Desarrollo_HTML/styles.css
@@ -1,3 +1,109 @@
-p {
-    color:red;
+/* ESTILOS DE CAJAS*/
+
+
+body {
+    background: rgb(255, 254, 254);
+  }
+  
+  .flexbox-container {
+      display: -ms-flex;
+      display: -webkit-flex;
+      display: flex;
+      padding-right: 150px;
+      padding-left: 60px;
+      margin-left: 0px;
+  }
+  
+  .flexbox-container > div {
+      width: 50%;
+      padding: 15px;
+      padding-right: 25px;
+
+     
+    background: #fff;
+  }
+  
+  .flexbox-container > div:first-child {
+      margin-right: 15px;
+      margin-left: px;
+      padding-left: 25px;
+      padding-right: ;
+  }
+  
+
+
+/*ESTILO DE IMAGENES */
+
+.imagen_nota_destacada{
+    width: 700px;
+    height: 580px;
+    border-radius: 5px 5px 5px 5px;
+    padding-top: 0px;
+    
+}
+
+.imagenes_sub_notas{
+    width: 500px;
+    height: 213px;
+    border-radius: 5px 5px 5px 5px;
+    padding-top: 8px;
+
+}
+
+
+/*ESTILO DE TITULOS / SUBTITLOS*/
+
+.Titulos_notas_secundarias{
+    padding-right: 110px;
+
+}
+
+.tipo_titulo{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*.flex-row{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-left: 15px;
+}
+
+
+.flex-column{
+    
+    padding-left: 15px;
+    padding-right: 15px;
+    
+}
+
+
+.imagen_destacada{
+    width: 1000px;
+    height: 900px;
+
+}
+
+.imagenes_secundarios{
+    width: 600px;
+    height: 400px;
+
 }
