--- a/css/normalize.css
+++ b/css/normalize.css
@@ -195,10 +195,7 @@ select { /* 1 */
 button,
 [type="button"],
 [type="reset"],
-[type="submit"] {
-    -webkit-appearance: button;
-}
-
+[type="submit"] 
 /**
  * Remove the inner border and padding in Firefox.
  */
@@ -288,7 +285,6 @@ textarea {
  */
 
 [type="search"] {
-    -webkit-appearance: textfield; /* 1 */
     outline-offset: -2px; /* 2 */
 }
 
@@ -296,9 +292,7 @@ textarea {
  * Remove the inner padding in Chrome and Safari on macOS.
  */
 
-[type="search"]::-webkit-search-decoration {
-    -webkit-appearance: none;
-}
+[type="search"]::-webkit-search-decoration 
 
 /**
  * 1. Correct the inability to style clickable types in iOS and Safari.
@@ -306,7 +300,7 @@ textarea {
  */
 
 ::-webkit-file-upload-button {
-    -webkit-appearance: button; /* 1 */
+ /* 1 */
     font: inherit; /* 2 */
 }
 
