--- a/ProyectoFullStackElAnzuelo/style.css
+++ b/ProyectoFullStackElAnzuelo/style.css
@@ -1,171 +1,157 @@
-:root{
-    --colorFondo: #f1f1f1;
-    --color-blue: #0000ff;
-}
-
-
-*{
-    font-family: 'Raleway', sans-serif;
-}
-
 body{
-    background-color: var(--colorFondo);
-    font-family: 'Raleway', sans-serif;
-    
+    font-family: sans-serif;
+    margin: 0;
 }
 
-.container{
+a{
+    text-decoration: none;
+}
 
-    background-color: var(--colorFondo);
-    max-width: 1920px;
-    height: 780px;
-    padding: .4rem;
-
+header {
    
-  }
-
-/* Menu */
-
-.menu{
-    background-color: var(--colorFondo);
-    box-shadow: 0 0 2px #00000060;
-    text-align: center;
-    margin: .5rem;
-}
-
-.menu__nav{
-    margin: auto;
     display: flex;
-    flex-flow: row nowrap;
-    justify-content:space-between;
+    height: 80px;
+    background: rgb(255, 255, 255);
+    justify-content: space-between;
     align-items: center;
-    height: 4rem;
+    padding: 50px;
+   
 }
 
-.menu__logo-box{
+.logo {
     display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
     align-items: center;
 }
 
-.menu__logo-img{
-    height: 4rem;
+.logo img {
+ height: 70px;
+ margin-left: 10px;
+
 }
 
-.menu__search-box{
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
-    align-items: center;
-    padding: .4rem .6rem;
-    border-radius: 1rem;
-    box-shadow: 0 0 2px #00000060;
+div i{
+    padding-right: 50px;
 }
+
 
 .menu__search-input{
-    width: 250px;
+
+    width: 200px;
     background-color: transparent;
     outline: none;
     border: none;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+    padding: .2rem .4rem;
+    border-radius: 1rem;
+    box-shadow: 0 0 4px #00000060;
+
+
 }
 
 .menu__search-icon{
     cursor: pointer;
 }
 
-.menu__cart-login-box{
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
-    cursor: pointer;
-}
+/*Boton Ingresar */
 
-.menu__button{
-    padding: .6rem 1rem;
-    background-color: transparent;
-    color: var(--color-blue);
-    border: 1px solid var(--color-blue);
-    border-radius: .2rem;
+.btn-more {
     outline: none;
-    transition: .2s;
-    font-size: .9rem;
-    text-decoration: none;
-}
-
-.menu__button:hover{
-    background-color: var(--color-blue);
-    color: var(--color-white);
     cursor: pointer;
+    border: 1px solid #0075ff;
+    padding: 0.5rem 1.4rem;
+    margin: 10px 0 0 0;
+    font-size: inherit;
+    position: relative;
+    display: inline-block;
+    letter-spacing: 0.05rem;
+    font-weight: 700;
+    font-size: .93rem;
+    border-radius: 500px;
+    overflow: hidden;
+    background:#0075ff ;
+    color: #0075ff;
+   }
+   
+.btn-more span {
+    position: relative;
+    z-index: 10;
+    transition: color 0.4s;
+   }
+   
+.btn-more:hover span {
+    color: rgb(255, 255, 255);
+   }
+   
+.btn-more::before, .btn-more::after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+   }
+   
+.btn-more::before {
+    content: "";
+    background:#fff ;
+    width: 120%;
+    left: -10%;
+    transform: skew(30deg);
+    transition: transform 0.4s cubic-bezier(0.3, 1, 0.8, 1);
+   }
+   
+.btn-more:hover::before {
+    transform: translate3d(100%, 0, 0);
+   } 
+
+/* menu */
+
+   #menu ul{
+    background-color: #4e95e7;
+    list-style: none;
+    text-align: center ;
+    margin: 0;
+    padding: 0;
 }
 
-/*slider*/
-
-  ul, li {
-      padding: 0;
-      margin: 0;
-      list-style: none;
-  
-  }
-  
-  ul.slider{
-    margin: auto;
-    position: relative;
-    width: 1920px;
-    height: 500px;
-  }
-  
-  ul.slider li {
-      position: absolute;
-      left: 0px;
-      top: 0px;
-      opacity: 0;
-      width: inherit;
-      height: inherit;
-      transition: opacity .5s;
-      background:#fff;
-
-  }
-  
-  ul.slider li img{
-    width: 100%;
-    height: 500px;
-    object-fit: cover;
-
-  }
-  
-ul.slider li:first-child {
-      opacity: 1; 
-  }
-  
-  ul.slider li:target {
-      opacity: 1;
-  }
-
-  .sliders{
-   text-align: center;
-    margin: 20px;
-  
-  }
-
- 
-  .sliders li{
+#menu ul li{
     display: inline-block;
-    text-align: center;
-  
-  } 
-  
-  .sliders li a{
-    display: inline-block;
-    color: rgb(255, 255, 255);
+}
+
+#menu ul li a{
+    color: rgb(0, 0, 0);
+    display: inherit;
+    padding: 10px 50px;
     text-decoration: none;
-    background-color: #555555;
-    padding: 10px;
-    width: 20px;
-    height: 20px;
-    font-size: 18px;
-    border-radius: 100%;
-   
+}
+
+#menu ul li a:hover{
+    background-color: #0075ff;
+}
+
+
+
+/* Slider */
+
+.carousel-item{
+
+    width: 100vw;
+    height: 60vh;
+
+    align-items: center
   }
+
+
+
+
+
+
+
+
+
+
+
+
+@import "./node_modules/bootstrap/scss/bootstrap.scss";
