--- a/css/styles.css
+++ b/css/styles.css
@@ -6,34 +6,36 @@ body{
     padding: 0;
     
 }
-img{
-    
+
+
+/* Seccion - foro */
+.img-foro{
     width: 100%;
     height: 100%;
 }
-.row{
+.container-foro{
+    padding: 2rem;
     display:flex ;
-    height: 600px;
-    padding: 24px;
-    align-content:stretch ;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 
 }
-.cajas{
+.foro-item{
     flex:50%;
-
 }
-p{
+.foro-description{
     
     font-family:Helvetica, sans-serif;
     font-size: 10px;
 }
-h2{
+.foro-title-inf{
     font-weight: 100px;
     font-family:Arial, Helvetica, sans-serif black;
     font-size: 30px;
 }
 
-h3{
+.foro-title-sup{
     font: weight 100px; 
     font-family: Arial, Helvetica, sans-serif;
 }
