--- a/css/styles.css
+++ b/css/styles.css
@@ -136,7 +136,7 @@
     height: 100%;
 }
 .container-foro{
-    padding: 2rem;
+    padding: 2rem 0 2rem 2rem;
     display:flex ;
     flex-direction: row;
     justify-content: center;
