--- a/css/footer.css
+++ b/css/footer.css
@@ -1,11 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
-
-
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Nunito', sans-serif;
     text-decoration: none;
 }
 
@@ -13,72 +6,80 @@
     --color-esqueleto:#EFF3F5;
 }
 
-header{
-    width: 100%;
-    height: 60px;
-    background: var(--color-esqueleto);
-}
 
-.cover{
-    width: 100%;
-    height: 500px;
-    background: var(--color-esqueleto);
-    margin-top: 20px;
-}
-
-.container__article{
-    max-width: 1000px;
-    padding: 0px 20px;
-    margin: auto;
-    margin-top: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.container__article .box__article{
-    width: 200px;
-    height: 250px;
-    background: var(--color-esqueleto);
-    margin: 20px;
-}
-
-/*Aquí debajo va el FOOTER*/
+/* FOOTER */
 
 footer{
-    width: 100%;
-    padding: 50px 0px;
-    background-image: url(../Images/background-footer.svg);
-    background-size: cover;
-    
-    /*background-color: #d0f0f8;
-    -webkit-mask-image: url("../Images/background-footer.svg");
-    mask-image: url("../Images/background-footer.svg");
-    -webkit-mask-size: cover;
-    mask-size: cover;*/
+    width: 100vw;
+    margin-top: 20px;
+    padding: 4px 0px;  
+    background-color: #d0f0f8; 
 }
 
 .container__footer{
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    max-width: 1200px;
-    margin: auto;
+    flex-wrap: nowrap;
+    justify-content: space-around;
     margin-top: 100px;
 }
 
 .box__footer{
     display: flex;
     flex-direction: column;
-    padding: 40px;
+    padding: 30px;
 }
+.box__footer:first-child {
+    margin-top: -3rem;
+}
+/* subscribe */
 
-.box__footer .logo img{
-    width: 180px;
+/* From uiverse.io by @alexruix */
+.group-subs {
+    display: flex;
+    align-items: center;
+  }
+  
+  .subscribe-footer__input {
+    min-height: 50px;
+    max-width: 150px;
+    padding: 0 1rem;
+    color: #fff;
+    font-size: 15px;
+    border: 1px solid #3898EC;
+    border-radius: 6px 0 0 6px;
+    background-color: transparent;
+  }
+  
+  .button--submit {
+    min-height: 50px;
+    padding: .5em 1em;
+    border: none;
+    border-radius: 0 6px 6px 0;
+    background-color: #3898EC;
+    color: #fff;
+    font-size: 15px;
+    cursor: pointer;
+    transition: background-color .3s ease-in-out;
+  }
+  
+  .button--submit:hover {
+    background-color: #3898EC;
+  }
+  
+  .subscribe-footer__input:focus, .subscribe-footer__input:focus-visible {
+    border-color: #3898EC;
+    outline: none;
+  }
+  
+
+
+/*  */
+.box__footer .logo-footer img{
+    width: 280px;
 }
 
 .box__footer .terms{
-    max-width: 350px;
+    max-width: 280px;
     margin-top: 20px;
     font-weight: 500;
     color: #7a7a7a;
