--- a/css/shipping.css
+++ b/css/shipping.css
@@ -1,19 +1,16 @@
-/* general */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-
-
+  
 .checkout-container {
-    padding-top: 150px;
+    padding-top: 30px;
     height: 100vh;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: flex-start;
-    /* background: linear-gradient(60deg, rgba(84, 58, 183, 1) 0%, rgba(0, 172, 193, 1) 100%); */
 
 }
 
@@ -155,3 +152,10 @@ input[type="radio"]:checked + label:after {
 }
 
 
+   /* Carrito */
+
+   .btn {
+    width:35px;
+    height: 35px;
+    border-radius: 100%;
+   }
