--- a/css/payment.css
+++ b/css/payment.css
@@ -8,7 +8,7 @@
 
 .checkout-container {
     padding-top: 30px;
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -29,7 +29,9 @@
     width: 80%;
     margin: 0 10%;
 }
-
+.form-container h3 {
+    font-size: 1.5rem;
+}
 .form-control {
     height: 50px;
     border-radius: 10px;
