--- a/css/shipping.css
+++ b/css/shipping.css
@@ -5,8 +5,8 @@
 }
   
 .checkout-container {
-    padding-top: 30px;
-    height: 100vh;
+    padding-top: 20px;
+    height: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -20,7 +20,9 @@
     width: 80%;
     margin: 0 10%;
 }
-
+.form-container h3 {
+    font-size: 1.5rem;
+}
 .container ul {
 	margin-top: 0;
 	padding-left: 0em;
