--- a/HTML/style.css
+++ b/HTML/style.css
@@ -1,14 +1,14 @@
-section {
-    background-color: #aaaaff;
-    width: 800px;
-    text-align: center;
+body {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  color: #5a5a5a;
+  align-items: center ;
 }
-div {
-    background-color: red;
-    display: inline-block;
-    padding: 5px 5px;
-    text-align: top;
+.marketing .col-lg-1 {
+  margin-bottom: 1.5rem;
+  text-align: center;
 }
-h3 {
-    display: flex;
+.marketing .col-lg-1 p {
+  margin-right: .75rem;
+  margin-left: .75rem;
 }
