--- a/css/product.css
+++ b/css/product.css
@@ -10,7 +10,7 @@
 .product-galeria img {
   width: 100%;
   height: 90%;
-  object-fit: cover;
+  object-fit:contain;
   position: absolute;
   top: 0;
   left: 0;
@@ -61,11 +61,11 @@ input[type='radio']:checked:after {
   top: -2px;
   left: -1px;
   position: relative;
-  background-color: #0d075f;
+  background-color: #0075ff;
   content: '';
   display: inline-block;
   visibility: visible;
-  border: 2px solid #333;
+  border: 2px solid #0075ff;
 } 
 /* Data Product */
 div.card-product {
@@ -73,10 +73,21 @@ div.card-product {
   align-items: center;
   justify-content: center;
 }
-
+/* Footer card */
+.cart {
+  display: flex;
+  justify-content: start;
+  align-items: flex-end;
+}
+div.product-cantidad{
+  margin-right:20px ;
+}
 /* Botón */
+a{
+  text-decoration: none;
+}
 .btn-add {
-  width: 30%;
+  width: 100%;
   margin-left:14%;
   margin-right: 0;
   padding: 0.35em;
@@ -129,3 +140,23 @@ div.card-product {
  .btn-add:active .icon {
   transform: scale(0.95);
  }
+
+ /* Input */
+ label{
+  font-weight: 600;
+ }
+ input.product-cantidad[type='number']{
+  border: 3px solid #0075FF;
+  border-radius: 20px;
+  cursor: pointer;
+  padding: 7px;
+  font-size: 1rem;
+  transition: all 1s;
+  max-width: 60px;
+ }
+ 
+ .input.product-cantidad[type='number']:focus {
+  outline-color: rgb(127, 170, 170);
+}
+ .input.product-cantidad[type='number']:hover {
+  outline-color: rgb(127, 170, 170);}
