--- a/css/shop.css
+++ b/css/shop.css
@@ -1,4 +1,8 @@
-
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 /* Slider */
 .carousel-item {
   width: 100vw;
@@ -13,16 +17,14 @@
   padding-top: 100px;
 }
 
-.row {
-  padding-left: 120px;
-  padding-right: 120px;
-  padding-bottom: 100px;
+.cat-container {
+  padding-bottom: 10px;
   text-align: center;
 }
 
 .card-img-top {
-  width: 100vw;
-  height: 30vh;
+  width: 100%;
+  height: 40vh;
 }
 
 .card-title {
