--- a/view/login-registro.html
+++ b/view/login-registro.html
@@ -53,8 +53,8 @@
                             required>
                           <i class="input-icon bi bi-key"></i>
                         </div>
-                        <a href="/index.html"><button class="btn mt-4"><span>Ingresar</span></button></a>
-                        <p class="mb-0 mt-4 text-center"><a href="/reset-password.html" class="link">¿Olvidaste tu
+                        <a href="./index.html"><button class="btn mt-4"><span>Ingresar</span></button></a>
+                        <p class="mb-0 mt-4 text-center"><a href="./reset-password.html" class="link">¿Olvidaste tu
                             constraseña?</a></p>
                       </div>
                     </div>
