--- a/view/product.html
+++ b/view/product.html
@@ -121,7 +121,7 @@
                       </label>
                  </div>
                     <div class="producto-add-cart">
-                        <a href="/cart.html" >
+                        <a href="./cart.html" >
                             <button class="btn-add mt-3"> Añadir
                               <div class="icon">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
