--- a/view/productos.html
+++ b/view/productos.html
@@ -25,7 +25,7 @@
     <!-- normalize -->
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
 
-    <!-- Estilos Header -->>
+    <!-- Estilos Header -->
     <link rel="stylesheet" href="./css/header.css">
     <!-- Estilos  -->
     <link rel="stylesheet" type="text/css" href="css/productos.css">
