--- a/view/reset-password.html
+++ b/view/reset-password.html
@@ -45,7 +45,7 @@
                           <input type="email" name="logemail" class="form-style" placeholder="Email" id="logemail" required>
                           <i class="input-icon bi bi-person-circle"></i>
                         </div>
-                        <a href="#"><button class="btn mt-5"><span>Recuperar</span></button></a>
+                        <a href="./index.html"><button class="btn mt-5"><span>Recuperar</span></button></a>
                        </a></p>
                       </div>
                     </div>
