--- a/view/shipping.html
+++ b/view/shipping.html
@@ -90,7 +90,7 @@
           </div>
         </div>
 
-        <a href="/payment.html">
+        <a href="./payment.html">
           <button class="btn-cont"> Continuar
             <div class="icon">
               <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
