--- a/view/shop.html
+++ b/view/shop.html
@@ -25,7 +25,7 @@
   <!-- normalize -->
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
 
-  <!-- Estilos Header -->>
+  <!-- Estilos Header -->
   <link rel="stylesheet" href="./css/header.css">
   <!-- Estilos  -->
   <link rel="stylesheet" type="text/css" href="css/shop.css">
@@ -38,7 +38,7 @@
   <!-- Encabezado Header -->
   <header>
     <a ref="#" class="logo">
-      <img src="./img/El-anzuelo_logo.png" alt="logo de la tienda">
+      <img src="./images/identidad/El-anzuelo-logo.png" alt="logo de la tienda">
     </a>
     <div>
 
