--- a/view/checkout.html
+++ b/view/checkout.html
@@ -115,7 +115,7 @@
           </div>
         </div>
 
-        <a href="/shipping.html">
+        <a href="./shipping.html">
           <button class="btn-cont"> Continuar
             <div class="icon">
               <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
