--- a/view/payment.html
+++ b/view/payment.html
@@ -119,7 +119,7 @@
                     </div>
                 </div>
 
-                <a href="/index.html">
+                <a href="./index.html">
                     <button class="btn-cont"> Pagar
                         <div class="icon">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
