Cambiar texto shop

--- a/view/index.html
+++ b/view/index.html
@@ -212,11 +212,7 @@
       <!-- Texto -->
       <div class="e-shop__text col-md-6">
         <h2 class="e-shop__text__title">E-shop</h2>
-        <p class="e-shop__text__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea
-          pariatur
-          quas modi ex molestiae quia dolore consequuntur illum molestias saepe quam vero, quis suscipit aut
-          vel
-          ad dolorum ratione dolor!</p>
+        <p class="e-shop__text__description">Un sitio dedicado al asesoramiento para el pescador deportivo, cañas, reeles, artificiales, accesorios. Bait Cast y Spinning. Marines Sports, Daiwa y las mejores marcas para los mas exigentes.</p>
       </div>
 
       <!-- slide -->
