--- a/view/index.html
+++ b/view/index.html
@@ -225,9 +225,7 @@
               <div class="card text-bg-dark ">
                 <img src="images/shop/home/slide-1.jpg" class="card-img" alt="...">
                 <div class="card-img-overlay ">
-                  <h5 class="card-title">Pesca Deportiva</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit longer.</p>
+                  <h5 class="card-title text-center text-white text-bold">Pesca Deportiva</h5>
                 </div>
               </div>
             </div>
@@ -236,12 +234,10 @@
           <!-- item 2 -->
           <div class="carousel-item carousel-item-shop ">
             <div class="col-7  container-card">
-              <div class="card text-bg-dark">
+              <div class="card text-bg-dark text-center text-white text-bold">
                 <img src="images/shop/home/slide-2.jpg" class="card-img" alt="...">
                 <div class="card-img-overlay">
-                  <h5 class="card-title">Pesca Deportiva</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit longer.</p>
+                  <h5 class="card-title text-center text-white text-bold">Cañas</h5>
                 </div>
               </div>
             </div>
@@ -253,9 +249,7 @@
               <div class="card text-bg-dark">
                 <img src="images/shop/home/slide-3.jpg" class="card-img" alt="...">
                 <div class="card-img-overlay">
-                  <h5 class="card-title">Pesca Deportiva</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit longer.</p>
+                  <h5 class="card-title text-center text-white text-bold">Anzuelos</h5>
                 </div>
               </div>
             </div>
@@ -267,9 +261,7 @@
               <div class="card text-bg-dark">
                 <img src="images/shop/home/slide-4.jpg" class="card-img" alt="...">
                 <div class="card-img-overlay">
-                  <h5 class="card-title">Pesca Deportiva</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit longer.</p>
+                  <h5 class="card-title text-center text-white text-bold">Reeles</h5>
                 </div>
               </div>
             </div>
@@ -281,9 +273,7 @@
               <div class="card text-bg-dark">
                 <img src="images/shop/home/slide-5.jpg" class="card-img" alt="...">
                 <div class="card-img-overlay">
-                  <h5 class="card-title">Pesca Deportiva</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit longer.</p>
+                  <h5 class="card-title text-center text-white text-bold">Accesorios</h5>
                 </div>
               </div>
             </div>
@@ -295,9 +285,7 @@
               <div class="card text-bg-dark">
                 <img src="images/shop/home/slide-6.jpg" class="card-img" alt="...">
                 <div class="card-img-overlay">
-                  <h5 class="card-title">Pesca Deportiva</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit longer.</p>
+                  <h5 class="card-title text-center text-white text-bold">Cajas</h5>
                 </div>
               </div>
             </div>
