--- a/view/index.html
+++ b/view/index.html
@@ -207,104 +207,92 @@
 
   <!-- SECCIÓN E-SHOP 
 ==================================================================== -->
-  <section class="e-shop">
-    <div class="e-shop-container">
-      <!-- Texto -->
-      <div class="e-shop__text col-md-6">
-        <h2 class="e-shop__text__title">E-shop</h2>
-        <p class="e-shop__text__description">Un sitio dedicado al asesoramiento para el pescador deportivo, cañas, reeles, artificiales, accesorios. Bait Cast y Spinning. Marines Sports, Daiwa y las mejores marcas para los mas exigentes.</p>
-      </div>
+<section class="e-shop">
+  <div class="e-shop-container">
+    <!-- Texto -->
+    <div class="e-shop__text col-md-6">
+      <h2 class="e-shop__text__title">E-shop</h2>
+      <p class="e-shop__text__description">Un sitio dedicado al asesoramiento para el pescador deportivo, cañas, reeles, artificiales, accesorios. Bait Cast y Spinning. Marines Sports, Daiwa y las mejores marcas para los mas exigentes.</p>
+    </div>
 
-      <!-- slide -->
-      <div id="myCarousel" class="carousel slide slide-shop" data-bs-ride="carousel">
-        <!-- carousel -->
-        <div class="carousel-inner w-100">
-          <!-- item 1 -->
-          <div class="carousel-item carousel-item-shop  active">
-            <div class="col-7 container-card">
-              <div class="card text-bg-dark ">
-                <img src="images/shop/home/slide-1.jpg" class="card-img" alt="...">
-                <div class="card-img-overlay ">
-                  <h5 class="card-title">Pesca Deportiva</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit longer.</p>
-                </div>
+    <!-- slide -->
+    <div id="myCarousel" class="carousel slide slide-shop" data-bs-ride="carousel">
+      <!-- carousel -->
+      <div class="carousel-inner w-100">
+        <!-- item 1 -->
+        <div class="carousel-item carousel-item-shop  active">
+          <div class="col-7 container-card">
+            <div class="card text-bg-dark ">
+              <img src="images/shop/home/slide-1.jpg" class="card-img" alt="...">
+              <div class="card-img-overlay ">
+                <h5 class="card-title text-center text-white text-bold">Pesca Deportiva</h5>
               </div>
             </div>
           </div>
-          <!-- /item 1 -->
-          <!-- item 2 -->
-          <div class="carousel-item carousel-item-shop ">
-            <div class="col-7  container-card">
-              <div class="card text-bg-dark">
-                <img src="images/shop/home/slide-2.jpg" class="card-img" alt="...">
-                <div class="card-img-overlay">
-                  <h5 class="card-title">Pesca Deportiva</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit longer.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- /item 2 -->
-          <!-- item 3-->
-          <div class="carousel-item carousel-item-shop">
-            <div class="col-7  container-card">
-              <div class="card text-bg-dark">
-                <img src="images/shop/home/slide-3.jpg" class="card-img" alt="...">
-                <div class="card-img-overlay">
-                  <h5 class="card-title">Pesca Deportiva</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit longer.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- /item 3-->
-          <!-- item 4 -->
-          <div class="carousel-item carousel-item-shop">
-            <div class="col-7  container-card">
-              <div class="card text-bg-dark">
-                <img src="images/shop/home/slide-4.jpg" class="card-img" alt="...">
-                <div class="card-img-overlay">
-                  <h5 class="card-title">Pesca Deportiva</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit longer.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- /item 4 -->
-          <!-- item 5 -->
-          <div class="carousel-item  carousel-item-shop">
-            <div class="col-7  container-card">
-              <div class="card text-bg-dark">
-                <img src="images/shop/home/slide-5.jpg" class="card-img" alt="...">
-                <div class="card-img-overlay">
-                  <h5 class="card-title">Pesca Deportiva</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit longer.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- /item 5 -->
-          <!-- item 6 -->
-          <div class="carousel-item carousel-item-shop">
-            <div class="col-7  container-card">
-              <div class="card text-bg-dark">
-                <img src="images/shop/home/slide-6.jpg" class="card-img" alt="...">
-                <div class="card-img-overlay">
-                  <h5 class="card-title">Pesca Deportiva</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit longer.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- item 6 -->
         </div>
-        <!-- /carousel -->
+        <!-- /item 1 -->
+        <!-- item 2 -->
+        <div class="carousel-item carousel-item-shop ">
+          <div class="col-7  container-card">
+            <div class="card text-bg-dark text-center text-white text-bold">
+              <img src="images/shop/home/slide-2.jpg" class="card-img" alt="...">
+              <div class="card-img-overlay">
+                <h5 class="card-title text-center text-white text-bold">Cañas</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- /item 2 -->
+        <!-- item 3-->
+        <div class="carousel-item carousel-item-shop">
+          <div class="col-7  container-card">
+            <div class="card text-bg-dark">
+              <img src="images/shop/home/slide-3.jpg" class="card-img" alt="...">
+              <div class="card-img-overlay">
+                <h5 class="card-title text-center text-white text-bold">Anzuelos</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- /item 3-->
+        <!-- item 4 -->
+        <div class="carousel-item carousel-item-shop">
+          <div class="col-7  container-card">
+            <div class="card text-bg-dark">
+              <img src="images/shop/home/slide-4.jpg" class="card-img" alt="...">
+              <div class="card-img-overlay">
+                <h5 class="card-title text-center text-white text-bold">Reeles</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- /item 4 -->
+        <!-- item 5 -->
+        <div class="carousel-item  carousel-item-shop">
+          <div class="col-7  container-card">
+            <div class="card text-bg-dark">
+              <img src="images/shop/home/slide-5.jpg" class="card-img" alt="...">
+              <div class="card-img-overlay">
+                <h5 class="card-title text-center text-white text-bold">Accesorios</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- /item 5 -->
+        <!-- item 6 -->
+        <div class="carousel-item carousel-item-shop">
+          <div class="col-7  container-card">
+            <div class="card text-bg-dark">
+              <img src="images/shop/home/slide-6.jpg" class="card-img" alt="...">
+              <div class="card-img-overlay">
+                <h5 class="card-title text-center text-white text-bold">Cajas</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- item 6 -->
+      </div>
+      <!-- /carousel -->
 
         <!-- Controls -->
         <button class="carousel-control-prev prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
