rutas de botones clima y calendarios

--- a/view/index.html
+++ b/view/index.html
@@ -132,34 +132,34 @@
     </div>
     <div class="row d-flex justify-content-between ">
       <div class="col-lg-2 text-center">
-        <img src="images/clima/clima.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title><img src="/images/clima/clima.jpg"></title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></img>
+        <img src="images/clima/clima.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title><img src="/images/clima/clima.jpg"></title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
         <h2 class="fw-normal">Clima</h2>
           <p>Toda la información sobre el clima y condiciónes del ambiente aquí.</p>
-          <p><a class="btn btn-secondary" href="#">IR &raquo;</a></p>
+          <p><a class="btn btn-secondary" href="clima.html">IR &raquo;</a></p>
         </div>
         <div class="col-lg-2 text-center">
-          <img src="images/clima/viento.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></img>
+          <img src="images/clima/viento.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
           <h2 class="fw-normal">Vientos</h2>
           <p>Aquí encontrarás la información necesaria sobre los vientos para planear mejor tus salidas pesqueras.</p>
-          <p><a class="btn btn-secondary" href="#">IR &raquo;</a></p>
+          <p><a class="btn btn-secondary" href="clima.html">IR &raquo;</a></p>
         </div>
         <div class="col-lg-2 text-center">
-          <img src="images/clima/marea.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></img>
+          <img src="images/clima/marea.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
           <h2 class="fw-normal">Marea</h2>
           <p>Entérate como esta la condición de la marea sobre la costa.</p>
-          <p><a class="btn btn-secondary" href="#">IR &raquo;</a></p>
+          <p><a class="btn btn-secondary" href="clima.html">IR &raquo;</a></p>
         </div>
         <div class="col-lg-2 text-center">
-          <img src="images/clima/luna.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></img>
+          <img src="images/clima/luna.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
           <h2 class="fw-normal">Luna</h2>
           <p>Dicen que conocer las fases lunares es una ventaja a la hora de practicar este deporte, aprende más aquí.</p>
-          <p><a class="btn btn-secondary" href="#">IR &raquo;</a></p>
+          <p><a class="btn btn-secondary" href="clima.html">IR &raquo;</a></p>
         </div>
         <div class="col-lg-2 text-center">
-          <img src="images/clima/apertura-pesca.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></img>
+          <img src="images/clima/apertura-pesca.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
           <h2 class="fw-normal">Apertura Pesca</h2>
           <p>Conoce más sobre torneos, eventos pasados y futuros, y más curiosidades aquí.</p>
-          <p><a class="btn btn-secondary" href="#">IR &raquo;</a></p>
+          <p><a class="btn btn-secondary" href="calendarios.html">IR &raquo;</a></p>
         </div>
       </div>
     </div>
